<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    android:orientation="vertical"
    tools:context="com.tech.Education.Cognitive.App_Activity.QuizActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="60dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quiz"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/outOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="1/10"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/quiz_progress"
                style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:progress="10"
                android:progressTint="@color/colorPrimaryDark"
                app:mpb_indeterminateTint="@color/colorPrimaryDark"
                app:mpb_progressStyle="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    card_view:cardBackgroundColor="#FFFFFF"
                    card_view:contentPadding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:paddingRight="10dp"
                            android:text="@string/quiz_question"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/question_img"
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@drawable/placeholder" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingTop="10dp">

                    <RadioButton
                        android:id="@+id/optOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:drawablePadding="50dp"
                        android:paddingLeft="10dip"
                        android:text="@string/quiz_option_a"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/optTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:drawablePadding="50dp"
                        android:paddingLeft="10dip"
                        android:text="@string/quiz_option_b"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/optThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:drawablePadding="50dp"
                        android:paddingLeft="10dip"
                        android:text="@string/quiz_option_c"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/optFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:drawablePadding="50dp"
                        android:paddingLeft="10dip"
                        android:text="@string/quiz_option_d"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                </RadioGroup>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/priviousBtn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/my_button"
                    android:text="Previous"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/my_button"
                    android:text="next"
                    android:textSize="12sp" />

            </RelativeLayout>


        </LinearLayout>


    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2303868441775126/3758885413"></com.google.android.gms.ads.AdView>


</RelativeLayout>
