<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gredient"
    android:fitsSystemWindows="true"
    tools:context="com.tech.Education.Cognitive.App_Activity.SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="15dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:contentDescription="Profile Image"
                android:src="@drawable/logo_two"
                tools:ignore="HardcodedText" />


            <EditText
                android:id="@+id/s_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_name"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/fullname"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp">

                <requestFocus />
            </EditText>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <!-- Email Label -->
            <EditText
                android:id="@+id/s_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <!--  Name Label -->
            <EditText
                android:id="@+id/refer_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_name"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/refer_code"
                android:inputType="text"
                android:maxLength="6"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />


            <LinearLayout
                android:id="@+id/marge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    app:ccp_textSize="12sp"
                    android:layout_weight="0.6"
                    android:paddingTop="25dp"
                    android:theme="@style/alert_dialog_light"
                    app:ccp_contentColor="#fff"
                    app:ccpDialog_backgroundColor="#fff"
                    />

                <EditText
                    android:id="@+id/s_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.4"
                    android:autofillHints="phone"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white" />


            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <!-- mobile Label -->
            <!-- Password Label -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/s_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints="password"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:labelFor="@+id/editText"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingStart="8dp"
                    android:paddingTop="20dp"
                    android:text="show"
                    android:visibility="gone"
                    tools:ignore="HardcodedText,RtlSymmetry" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/showPassReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />

            </FrameLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="#EEEEEE"
                android:padding="12dp"
                android:text="Create Account"
                android:textColor="#000000"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="Already a member? Login"
                android:textColor="#EEEEEE"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

